--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <title>H-Bday</title>
 </head>
 <body>
+  <audio id="my_audio" autoplay>
+    <source src="/static/audio.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
       <div class="demo">
         <div class="demo__help">
           
